--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint src --max-warnings=0",
-    "postinstall": "husky install"
+    "postinstall": "husky install",
+    "test": "jest"
   },
   "lint-staged": {
     "src/**/*": [
@@ -20,6 +21,8 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.18.6",
+    "@types/jest": "^28.1.4",
     "@types/node": "^18.0.2",
     "@types/react": "^18.0.15",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
@@ -31,6 +34,8 @@
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.0",
+    "jest": "^28.1.2",
+    "jest-environment-jsdom": "^28.1.2",
     "lint-staged": "^13.0.3",
     "prettier": "2.7.1",
     "typescript": "^4.7.4"
