--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "start": "next start",
     "lint": "eslint src --max-warnings=0",
     "postinstall": "husky install",
-    "test": "jest"
+    "test": "jest",
+    "test:watch": "yarn test --watch"
   },
   "lint-staged": {
     "src/**/*": [
-      "yarn lint --fix"
+      "yarn lint --fix", "yarn test --bail"
     ]
   },
   "dependencies": {
@@ -22,6 +23,8 @@
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.18.6",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
     "@types/jest": "^28.1.4",
     "@types/node": "^18.0.2",
     "@types/react": "^18.0.15",
