--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "husky install",
     "test": "jest",
     "test:watch": "yarn test --watch",
+    "generate": "yarn plop --plopfile ./generators/plopfile.js",
     "storybook": "start-storybook -s ./public -p 6006",
     "build-storybook": "build-storybook -s ./public"
   },
@@ -60,6 +61,7 @@
     "jest-environment-jsdom": "^28.1.2",
     "jest-styled-components": "^7.0.8",
     "lint-staged": "^13.0.3",
+    "plop": "^3.1.1",
     "prettier": "2.7.1",
     "typescript": "^4.7.4"
   }
